added framelogs endpoint and messages
