# go/as/external/api/handyrusty.pb.go
@@ -34,29 +34,32 @@ func init() {
 }
 
 var fileDescriptor_89a3848cc56d53bf = []byte{
-	// 346 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x8c, 0x92, 0xcd, 0x4a, 0xeb, 0x40,
-	0x14, 0xc7, 0x69, 0x2f, 0xdc, 0x45, 0xca, 0x85, 0x6b, 0x04, 0xd1, 0xb4, 0x6a, 0x09, 0x08, 0x52,
-	0x69, 0x06, 0xec, 0x42, 0xec, 0xd2, 0xa2, 0x75, 0xdd, 0xee, 0xdc, 0x9d, 0x4c, 0x4f, 0x93, 0xc1,
-	0xce, 0x87, 0x33, 0x93, 0xa6, 0x75, 0xe9, 0x2b, 0xf8, 0x68, 0xbe, 0x82, 0x6f, 0xe0, 0x0b, 0xc8,
-	0xe4, 0x83, 0x96, 0x52, 0xc1, 0xe5, 0x9c, 0xff, 0xef, 0xfc, 0x7f, 0xf9, 0x18, 0xaf, 0x0b, 0x86,
-	0xe0, 0xca, 0xa2, 0x16, 0xb0, 0x20, 0xa0, 0x18, 0x49, 0x41, 0xcc, 0xd6, 0x3a, 0x33, 0x76, 0x1d,
-	0x29, 0x2d, 0xad, 0xf4, 0xff, 0x80, 0x62, 0x41, 0x27, 0x91, 0x32, 0x59, 0x60, 0x41, 0x80, 0x10,
-	0xd2, 0x82, 0x65, 0x52, 0x98, 0x12, 0x09, 0xce, 0xab, 0xb4, 0x38, 0xc5, 0xd9, 0x9c, 0x58, 0xc6,
-	0xd1, 0x58, 0xe0, 0xaa, 0x02, 0xda, 0xbb, 0x00, 0x72, 0x55, 0x0b, 0x82, 0xc3, 0x8d, 0x92, 0xa4,
-	0xba, 0x1a, 0xb6, 0x92, 0x9c, 0x24, 0x79, 0x79, 0xb8, 0xfe, 0x6a, 0x7a, 0x07, 0x8f, 0x0e, 0x9a,
-	0x38, 0x68, 0x8a, 0x7a, 0xc9, 0x28, 0xfa, 0xaf, 0xde, 0xff, 0x31, 0xda, 0x07, 0x0d, 0x1c, 0x47,
-	0x32, 0x13, 0x16, 0xb5, 0xf1, 0xdb, 0x51, 0xaa, 0xa3, 0xdd, 0xe9, 0x04, 0x5f, 0x32, 0x34, 0x36,
-	0xe8, 0xec, 0x0f, 0x8d, 0x92, 0xc2, 0x60, 0x78, 0xf5, 0xf6, 0xf1, 0xf9, 0xde, 0xbc, 0x08, 0xbb,
-	0x9b, 0xcf, 0xd0, 0x2f, 0x1f, 0x6a, 0xee, 0x78, 0x43, 0x68, 0xb5, 0x31, 0x6c, 0xf4, 0x7c, 0xe1,
-	0xfd, 0xab, 0x8b, 0xa6, 0x0a, 0x71, 0xe6, 0x1f, 0x6f, 0x77, 0x17, 0xa3, 0xda, 0x7a, 0xb2, 0x27,
-	0xa9, 0x94, 0x97, 0x85, 0x32, 0x0c, 0x4f, 0x7f, 0x52, 0x1a, 0x87, 0x3b, 0x9f, 0xf6, 0x5a, 0xf7,
-	0x2b, 0xa4, 0x23, 0xc9, 0x39, 0x88, 0x99, 0x7f, 0xe4, 0x3a, 0xb7, 0x06, 0xb5, 0xeb, 0x2c, 0x4a,
-	0xf2, 0x68, 0x0c, 0x16, 0x73, 0x58, 0x57, 0x91, 0xa3, 0x7e, 0xf1, 0x8e, 0x9a, 0x12, 0x5c, 0x21,
-	0xed, 0xd3, 0x72, 0x6b, 0xd8, 0xe8, 0xdd, 0xdd, 0x3e, 0xdd, 0x24, 0xcc, 0xa6, 0x59, 0x1c, 0x51,
-	0xc9, 0x49, 0xac, 0x25, 0x05, 0xd0, 0x84, 0xa6, 0x4c, 0x2b, 0x63, 0x81, 0x3e, 0xf7, 0x5d, 0x47,
-	0x22, 0xc9, 0x72, 0x40, 0x76, 0x2e, 0x51, 0xfc, 0xb7, 0xf8, 0x6f, 0x83, 0xef, 0x00, 0x00, 0x00,
-	0xff, 0xff, 0xcb, 0x9c, 0x0d, 0xd6, 0x5e, 0x02, 0x00, 0x00,
+	// 393 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x8c, 0x92, 0x41, 0x8b, 0x13, 0x31,
+	0x1c, 0xc5, 0xa9, 0x8a, 0x87, 0x29, 0x82, 0x46, 0x10, 0x9d, 0xb6, 0x5a, 0x06, 0x04, 0xa9, 0xcc,
+	0x04, 0x2c, 0x22, 0xf6, 0x68, 0xd5, 0x7a, 0xf0, 0xd4, 0xde, 0xbc, 0x65, 0x32, 0xff, 0x66, 0x06,
+	0x3b, 0x49, 0x36, 0xc9, 0x74, 0xda, 0x3d, 0x2d, 0x7b, 0xdc, 0xeb, 0x7e, 0xb4, 0xfd, 0x0a, 0xfb,
+	0x41, 0x96, 0x64, 0x32, 0xb4, 0x0c, 0x2d, 0xec, 0x31, 0xef, 0xbd, 0xfc, 0x7f, 0xef, 0x1f, 0x12,
+	0x8c, 0x89, 0xc6, 0xb0, 0x33, 0xa0, 0x38, 0xd9, 0x60, 0x22, 0x0b, 0x9c, 0x13, 0x9e, 0xed, 0x55,
+	0xa5, 0xcd, 0x3e, 0x91, 0x4a, 0x18, 0x81, 0x9e, 0x12, 0x59, 0x84, 0x43, 0x26, 0x04, 0xdb, 0x80,
+	0x4b, 0x10, 0xce, 0x85, 0x21, 0xa6, 0x10, 0x5c, 0x37, 0x91, 0xf0, 0x83, 0x77, 0xdd, 0x29, 0xad,
+	0xd6, 0xd8, 0x14, 0x25, 0x68, 0x43, 0x4a, 0xe9, 0x03, 0x83, 0x6e, 0x00, 0x4a, 0xd9, 0x02, 0xc2,
+	0xd7, 0x07, 0x24, 0xce, 0x95, 0x17, 0xfb, 0xac, 0xc6, 0xac, 0x6e, 0x0e, 0x5f, 0xae, 0x9e, 0x05,
+	0xaf, 0xfe, 0xd8, 0xd0, 0xd2, 0x86, 0x56, 0xa0, 0xb6, 0x05, 0x05, 0x74, 0x19, 0xbc, 0x5c, 0x80,
+	0xf9, 0xad, 0x48, 0x09, 0x73, 0x51, 0x71, 0x03, 0x4a, 0xa3, 0x41, 0x92, 0xab, 0xa4, 0xab, 0x2e,
+	0xe1, 0xa2, 0x02, 0x6d, 0xc2, 0xe1, 0x69, 0x53, 0x4b, 0xc1, 0x35, 0x44, 0x9f, 0xaf, 0xef, 0xee,
+	0x6f, 0x9f, 0x7c, 0x8c, 0xc6, 0x87, 0x67, 0x88, 0x9b, 0x52, 0x6b, 0x9b, 0xd7, 0x98, 0xfa, 0x1b,
+	0xb3, 0xde, 0x04, 0xf1, 0xe0, 0x45, 0x3b, 0x68, 0x25, 0x01, 0x32, 0xf4, 0xf6, 0x78, 0xb6, 0x93,
+	0x5a, 0xea, 0xbb, 0x13, 0x8e, 0x47, 0x7e, 0x72, 0xc8, 0x28, 0x1a, 0x9d, 0x43, 0x6a, 0x1b, 0xb7,
+	0x3c, 0x15, 0xf4, 0x7f, 0xed, 0x80, 0xce, 0x45, 0x59, 0x12, 0x9e, 0xa1, 0x37, 0x76, 0xe6, 0x91,
+	0xd0, 0xb2, 0xde, 0x27, 0xac, 0x4e, 0x16, 0xc4, 0x40, 0x4d, 0xf6, 0xde, 0xb2, 0xa9, 0x47, 0xec,
+	0xa8, 0x28, 0x86, 0x1d, 0xd0, 0x98, 0x36, 0xb7, 0x2c, 0xf3, 0xa6, 0x17, 0xa0, 0x05, 0x98, 0x9f,
+	0x60, 0x5f, 0xdb, 0xb5, 0xd7, 0x7f, 0x05, 0x43, 0x23, 0xbf, 0x4f, 0x47, 0x3f, 0x54, 0x38, 0x63,
+	0xfb, 0x0a, 0x5f, 0x5d, 0x05, 0x1c, 0x4d, 0xce, 0xed, 0xbc, 0x11, 0x4c, 0xe3, 0xcc, 0xdd, 0x8e,
+	0x1b, 0x69, 0xd6, 0x9b, 0xfc, 0xf8, 0xfe, 0xef, 0x1b, 0x2b, 0x4c, 0x5e, 0xa5, 0x09, 0x15, 0x25,
+	0x4e, 0x95, 0xa0, 0x84, 0x28, 0x4c, 0xf3, 0x42, 0x49, 0x6d, 0x08, 0xfd, 0x1f, 0xdb, 0x69, 0x4c,
+	0xe0, 0xed, 0x14, 0x77, 0x7e, 0x74, 0xfa, 0xdc, 0x7d, 0xa2, 0xe9, 0x43, 0x00, 0x00, 0x00, 0xff,
+	0xff, 0x3a, 0xad, 0x81, 0xb5, 0xeb, 0x02, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -77,6 +80,8 @@ type HandyRustyServiceClient interface {
 	GetFrameSpeed(ctx context.Context, in *handyrusty.GetFrameSpeedRequest, opts ...grpc.CallOption) (*handyrusty.GetFrameSpeedResponse, error)
 	// ExecCommand sends the command to execute on gw and returns string it responses
 	ExecCommand(ctx context.Context, in *handyrusty.ExecCommandRequest, opts ...grpc.CallOption) (*gw.GatewayCommandExecResponse, error)
+	// GetDeviceFramesLog returns an array with device-frame logs
+	GetDeviceFramesLog(ctx context.Context, in *handyrusty.GetDeviceFramesLogRequest, opts ...grpc.CallOption) (*handyrusty.GetDeviceFramesLogResponse, error)
 }
 
 type handyRustyServiceClient struct {
@@ -114,6 +119,15 @@ func (c *handyRustyServiceClient) ExecCommand(ctx context.Context, in *handyrust
 	return out, nil
 }
 
+func (c *handyRustyServiceClient) GetDeviceFramesLog(ctx context.Context, in *handyrusty.GetDeviceFramesLogRequest, opts ...grpc.CallOption) (*handyrusty.GetDeviceFramesLogResponse, error) {
+	out := new(handyrusty.GetDeviceFramesLogResponse)
+	err := c.cc.Invoke(ctx, "/api.HandyRustyService/GetDeviceFramesLog", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // HandyRustyServiceServer is the server API for HandyRustyService service.
 type HandyRustyServiceServer interface {
 	// GetFrameCounters returns frame counters by type for the given range. Aggregation: day
@@ -122,6 +136,8 @@ type HandyRustyServiceServer interface {
 	GetFrameSpeed(context.Context, *handyrusty.GetFrameSpeedRequest) (*handyrusty.GetFrameSpeedResponse, error)
 	// ExecCommand sends the command to execute on gw and returns string it responses
 	ExecCommand(context.Context, *handyrusty.ExecCommandRequest) (*gw.GatewayCommandExecResponse, error)
+	// GetDeviceFramesLog returns an array with device-frame logs
+	GetDeviceFramesLog(context.Context, *handyrusty.GetDeviceFramesLogRequest) (*handyrusty.GetDeviceFramesLogResponse, error)
 }
 
 // UnimplementedHandyRustyServiceServer can be embedded to have forward compatible implementations.
@@ -136,6 +152,9 @@ func (*UnimplementedHandyRustyServiceServer) GetFrameSpeed(ctx context.Context, 
 }
 func (*UnimplementedHandyRustyServiceServer) ExecCommand(ctx context.Context, req *handyrusty.ExecCommandRequest) (*gw.GatewayCommandExecResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method ExecCommand not implemented")
+}
+func (*UnimplementedHandyRustyServiceServer) GetDeviceFramesLog(ctx context.Context, req *handyrusty.GetDeviceFramesLogRequest) (*handyrusty.GetDeviceFramesLogResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetDeviceFramesLog not implemented")
 }
 
 func RegisterHandyRustyServiceServer(s *grpc.Server, srv HandyRustyServiceServer) {
@@ -196,6 +215,24 @@ func _HandyRustyService_ExecCommand_Handler(srv interface{}, ctx context.Context
 	return interceptor(ctx, in, info, handler)
 }
 
+func _HandyRustyService_GetDeviceFramesLog_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(handyrusty.GetDeviceFramesLogRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(HandyRustyServiceServer).GetDeviceFramesLog(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/api.HandyRustyService/GetDeviceFramesLog",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(HandyRustyServiceServer).GetDeviceFramesLog(ctx, req.(*handyrusty.GetDeviceFramesLogRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 var _HandyRustyService_serviceDesc = grpc.ServiceDesc{
 	ServiceName: "api.HandyRustyService",
 	HandlerType: (*HandyRustyServiceServer)(nil),
@@ -211,6 +248,10 @@ var _HandyRustyService_serviceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "ExecCommand",
 			Handler:    _HandyRustyService_ExecCommand_Handler,
+		},
+		{
+			MethodName: "GetDeviceFramesLog",
+			Handler:    _HandyRustyService_GetDeviceFramesLog_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
